Revision history for Lufi

?.??.? ????-??-??

0.05.8 2020-11-18
	- 🌐 Update translations

0.05.7 2020-10-06
	- 🐛 Remove breakingchanges migration from sqliteToOtherDB (no need for now)

0.05.6 2020-09-28
	- 🌐 Update translations
	- 📝 Document file deletion behavior

0.05.5 2020-08-20
	- 🐛 Change lufi-provisioning.lock handling process to avoid error messages (#210)

0.05.4 2020-08-17
	- 🐛 Fix incorrect HTML in delays.html.ep (#207)

0.05.3 2020-08-17
	- 🐛 Check if provisioning lockfile mod time exists before using it (#208)

0.05.2 2020-07-25
	- 🔥 Remove code from abandonned feature
	- Fix regression introduced in 0.05.1 (#201)

0.05.1 2020-06-30
	- Update german translation
	- Fix possible high load due to concurrent provisioning

0.05.0 2020-06-02
	- Notifications when uploading and downloading files (#181)
	- Use Weblate instead of Zanata for translations (https://weblate.framasoft.org/projects/lufi/development/)
	- Add config API endpoint (#183)
	- Show latest tag and commit of the instance in about page and config API endpoint (#174)
	- Add support for Swift object storage (EXPERIMENTAL)

0.04.6 2019-11-07
	- Now can send large files (>2Gio) while using a DB other than SQLite (#165)
	- Use customized instance name in <title>

0.04.5 2019-10-14
	- Update german language
	- Smoother progress of progress bar (use smaller chunks)

0.04.4 2019-10-11
	- Fix invitations sorting order (#163)
	- Same behavior on files and invitations tables (striped, invert selection
	  button) (#166)
	- Change row color on hover
	- Fix typo that leads to error in Safari (#164)
	- Fix (for good, I hope) the problem with badly detected URLs in mail
	  sending (#159)
	- Fix unstranslated string (#167)

0.04.3 2019-09 29
	- Translate dates in invitations (#161)
	- Ignore all .conf files in .gitignore
	- Remove redundant fixed_domain setting in conf template

0.04.2 2019-08-14
	- Update german language
	- Fix logout button color on mobile view (#157)

0.04.1 2019-08-12